# agents-arena

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.plan/: ui-rewrite.md
agent_arena/: __init__.py
agent_arena/agents/: __init__.py  agent.py  loader.py
agent_arena/api/: __init__.py  app.py
agent_arena/arena/: __init__.py  channel.py  registry.py  world.py
agent_arena/cli/: __init__.py  main.py
agent_arena/core/: __init__.py  events.py  message.py  types.py
configs/agents/: ahmed.yaml  aisha.yaml  brian.yaml  carlos.yaml  david.yaml  devon.yaml  elena.yaml  james.yaml  jan.yaml  jasmine.yaml  lisa.yaml  marcus.yaml  mikhail.yaml  mortimer.yaml  nate.yaml  priya.yaml  richard.yaml  sofia.yaml  sophie.yaml  tyler.yaml  yuki.yaml
public/: app.html  index.html  personas.html
src/: index.ts  main.ts  server.ts
src/agents/: agent.ts  loader.ts
src/api/: app.ts
src/arena/: channel.ts  registry.ts  world.ts
src/core/: database.ts  events.ts  message.ts  types.ts
src/effects/: actor.ts  anthropic.ts  broadcast.ts  database.ts  index.ts  tools.ts
src/interpreters/: agent.ts  director.ts  index.ts  project.ts  room.ts  types.ts
src/runtime/: actor.ts  anthropic.ts  broadcast.ts  database.ts  executor.ts  index.ts  tools.ts  types.ts
src/tools/: bash-tool.ts  index.ts  memory-tool.ts  registry.ts  server-tools.ts  text-editor-tool.ts  types.ts
src/values/: agent.ts  ids.ts  index.ts  message.ts  project.ts  (+1 more)
templates/: index.html  personas.html
workspaces/: notes.txt
(+18 files in other folders)
